Fix bamboo clipping

--- a/overlay/style/_globals.scss
+++ b/overlay/style/_globals.scss
@@ -61,9 +61,6 @@ body {
 
 #shoots {
   display: flex;
-  flex-grow: 1;
-  flex-shrink: 1;
-  margin: 0 3vh 0;
   justify-content: space-evenly;
   align-items: flex-end;
 }
