--- a/overlay/style/_main.scss
+++ b/overlay/style/_main.scss
@@ -81,4 +81,10 @@ main.overlay-main {
       }
     }
   }
+
+  #shoots {
+    flex-grow: 1;
+    flex-shrink: 1;
+    margin: 0 3vh 0;
+  }
 }
