--- a/overlay/style/_title.scss
+++ b/overlay/style/_title.scss
@@ -3,7 +3,35 @@ main.overlay-title {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: calc(100% - #{($cloud-height + 1vh)});
+  margin: ($cloud-height + 1vh) 0 0;
+  position: relative;
+
+  &:before,
+  &:after {
+    content: '';
+    background: url('cloud.png') repeat-x;
+    background-size: auto 100%;
+    image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: crisp-edges;
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
+
+  &:before {
+    top: -$cloud-height + 1vh;
+    height: $cloud-height / 2;
+    filter: brightness(80%) drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
+  }
+
+  &:after {
+    top: -$cloud-height;
+    height: $cloud-height;
+    filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
+  }
 
   #title,
   #socials {
@@ -27,35 +55,13 @@ main.overlay-title {
 
   #shoots {
     position: absolute;
-    width: calc(100% - 6vh);
-    height: calc(100% - #{($cloud-height + 1vh)});
-    margin: ($cloud-height + 1vh) 3vh 0;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
     z-index: 0;
-
-    &:before,
-    &:after {
-      content: '';
-      background: url('cloud.png') repeat-x;
-      background-size: auto 100%;
-      image-rendering: pixelated;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: crisp-edges;
-      display: block;
-      position: absolute;
-      left: -3vh;
-      right: -3vh;
-    }
-
-    &:before {
-      top: -$cloud-height + 1vh;
-      height: $cloud-height / 2;
-      filter: brightness(80%) drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
-    }
-
-    &:after {
-      top: -$cloud-height;
-      height: $cloud-height;
-      filter: drop-shadow(4px 4px 0 rgba(0, 0, 0, 0.25));
-    }
+    padding: 0 3vh;
+    overflow: hidden;
   }
 }
